Use correct image versions

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -9,4 +9,4 @@ images:
   - name: steinsteiny/dataverse
     newTag: "5.4.1"
   - name: steinsteiny/solr-k8s
-    newTag: "7-5.4.1"
+    newTag: "7"
