--- a/k8s/solr/deployment.yaml
+++ b/k8s/solr/deployment.yaml
@@ -26,7 +26,8 @@ spec:
     spec:
       containers:
         - name: solr
-          image: steinsteiny/solr-k8s:7-5.4.1
+          image: steinsteiny/solr-k8s:7
+          imagePullPolicy: Always
           resources:
             requests:
               memory: "2Gi"
@@ -58,7 +59,7 @@ spec:
               path: /solr/collection1/admin/ping
               port: index
         - name: schema-sidecar
-          image: steinsteiny/solr-k8s:7-5.4.1
+          image: steinsteiny/solr-k8s:7
           command: ["/tini", "--", "/scripts/schema/sidecar.sh"]
           ports:
             - name: webhook
@@ -81,7 +82,8 @@ spec:
             - name: data
               mountPath: /data
         - name: schema-init
-          image: steinsteiny/solr-k8s:7-5.4.1
+          image: steinsteiny/solr-k8s:7
+          imagePullPolicy: Always
           command: ["/scripts/schema/init.sh"]
           volumeMounts:
             - name: schema
