--- a/k8s/dataverse/jobs/metadata-reexport.yaml
+++ b/k8s/dataverse/jobs/metadata-reexport.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: metadata-reexport
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/api/admin/metadata/reExportAll?unblock-key=${API_KEY}"']
           env:
@@ -29,7 +29,7 @@ spec:
                   key: key
       initContainers:
         - name: check-dataverse-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/robots.txt" -m 2 2>&1 > /dev/null;
             do echo waiting for dataverse; sleep 15; done;']
