--- a/k8s/dataverse/jobs/metadata-update-cmm-init.yaml
+++ b/k8s/dataverse/jobs/metadata-update-cmm-init.yaml
@@ -32,17 +32,17 @@ spec:
               readOnly: true
       initContainers:
         - name: check-solr-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${SOLR_SERVICE_HOST}:${SOLR_SERVICE_PORT}/solr/collection1/admin/ping" 2>&1 | grep "status.:.OK";
             do echo waiting for solr; sleep 3; done;']
         - name: check-dataverse-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/robots.txt" -m 2 2>&1 > /dev/null;
             do echo waiting for dataverse; sleep 15; done;']
         - name: get-metadata
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command:
             - "curl"
           args:
