--- a/k8s/dataverse/deployment.yaml
+++ b/k8s/dataverse/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: dataverse
   labels:
     app.kubernetes.io/name: dataverse
-    app.kubernetes.io/version: "5.4.1"
+    app.kubernetes.io/version: "1.1"
     app.kubernetes.io/component: appserver
     app.kubernetes.io/part-of: dataverse
     app.kubernetes.io/managed-by: kubectl
@@ -39,23 +39,29 @@ spec:
             - configMapRef:
                 name: dataverse
           env:
-
             - name: DATAVERSE_DB_HOST
               value: postgresql
-            - name: DATAVERSE_DB_USER
-              value: dataverse
-            - name: DATAVERSE_DB_PASSWORD
-              value: changeme
-            - name: DATAVERSE_DB_NAME
-              value: dataverse
-            - name: POSTGRES_PASSWORD
-              value: changeme           
-            - name: POSTGRES_SERVER
-              value: postgresql
-
-            - name: SOLR_LOCATION
+            - name: SOLR_SERVICE_HOST
               value: solr:8983
+            - name: SOLR_USER
+              value: solr
 
+            # - name: DATAVERSE_DB_USER
+            #   value: dataverse
+            # - name: DATAVERSE_DB_NAME
+            #   value: dataverse
+            # - name: POSTGRES_PASSWORD
+            #   value: changeme
+            # - name: POSTGRES_SERVER
+            #   value: postgresql
+
+
+            - name: DATAVERSE_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: dataverse-postgresql
+                  key: password
+                  optional: true
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
@@ -106,7 +112,7 @@ spec:
             'until pg_isready -h "${POSTGRESQL_SERVICE_HOST}" -p "${POSTGRESQL_SERVICE_PORT}";
             do echo waiting for database; sleep 3; done;']
         - name: check-solr-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${SOLR_SERVICE_HOST}:${SOLR_SERVICE_PORT}/solr/collection1/admin/ping" 2>&1 | grep "status.:.OK";
             do echo waiting for solr; sleep 3; done;']
