--- a/k8s/dataverse/jobs/metadata-update-cmm-init.yaml
+++ b/k8s/dataverse/jobs/metadata-update-cmm-init.yaml
@@ -42,7 +42,7 @@ spec:
             'until curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/robots.txt" -m 2 2>&1 > /dev/null;
             do echo waiting for dataverse; sleep 15; done;']
         - name: get-metadata
-          image: curlimages/curl
+          image: giantswarm/tiny-tools
           command:
             - "curl"
           args:
