--- a/k8s/dataverse/deployment.yaml
+++ b/k8s/dataverse/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: dataverse
-          image: steinsteiny/dataverse:5.4.1
+          image: sshoc/dataverse-k8s:5.4.1
           imagePullPolicy: Always
           resources:
             requests:
