--- a/k8s/dataverse/jobs/bootstrap.yaml
+++ b/k8s/dataverse/jobs/bootstrap.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: bootstrap
-          image: steinsteiny/dataverse:5.4.1
+          image: sshoc/dataverse-k8s:5.4.1
           command: ["scripts/bootstrap-job.sh"]
           envFrom:
             - configMapRef:
