--- a/k8s/dataverse/jobs/configure.yaml
+++ b/k8s/dataverse/jobs/configure.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: configure
-          image: steinsteiny/dataverse:5.4.1
+          image: sshoc/dataverse-k8s:5.4.1
           command: ["scripts/config-job.sh"]
           envFrom:
             - configMapRef:
