--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -6,7 +6,7 @@ bases:
   - dataverse
 
 images:
-  - name: steinsteiny/dataverse
+  - name: sshoc/dataverse-k8s
     newTag: "5.4.1"
-  - name: steinsteiny/solr-k8s
+  - name: sshoc/solr-k8s
     newTag: "7"
