DV update to 5.9

--- a/docker/dataverse-k8s/payara/Dockerfile
+++ b/docker/dataverse-k8s/payara/Dockerfile
@@ -4,54 +4,64 @@
 # You may obtain a copy of the License at
 # http://www.apache.org/licenses/LICENSE-2.0
 
-FROM payara/server-full:5.2020.3
-LABEL maintainer="FDM FZJ <forschungsdaten@fz-juelich.de>"
+FROM payara/server-full:5.2021.4-jdk11
+LABEL maintainer="FDM FZJ <forschungsdaten@fz-juelich.de>, DANS <vyacheslav.tykhonov@dans.knaw.nl>, SSHOC <wilko.steinhoff@dans.knaw.nl>"
 
-ARG VERSION=4.20
+# From base image:
+# PAYARA_DIR=/opt/payara/appserver
+# DOMAIN_NAME = domain1
+# HOME_DIR = /opt/payara
+# DEPLOY_DIR = /opt/payara/deployments
+# SCRIPT_DIR = /opt/payara/scripts
+# PREBOOT_COMMANDS=/opt/payara/config/pre-boot-commands.asadmin
+# POSTBOOT_COMMANDS=/opt/payara/config/post-boot-commands.asadmin
+
+
+ARG VERSION=5.9
 ARG DOMAIN=domain1
+ARG PGDRIVER_PKG=https://jdbc.postgresql.org/download/postgresql-42.2.19.jar
+ARG DUMPS_DIR=/dumps
+ARG DATAVERSE_PKG=https://github.com/IQSS/dataverse/releases/download/v${VERSION}/dvinstall.zip
 
 ENV DATA_DIR=/data\
-    DOCROOT_DIR=/docroot\
+    DOCROOT_DIR=/opt/docroot\
     METADATA_DIR=/metadata\
-    SECRETS_DIR=/secrets\
-    DUMPS_DIR=/dumps\
+    SECRETS_DIR=/secrets\    
     DOMAIN_DIR=${PAYARA_DIR}/glassfish/domains/${DOMAIN_NAME}\
     DATAVERSE_VERSION=${VERSION}\
-    DATAVERSE_PKG=https://github.com/IQSS/dataverse/releases/download/v${VERSION}/dvinstall.zip\
-    PGDRIVER_PKG=https://jdbc.postgresql.org/download/postgresql-42.2.12.jar\
     # Make heap dumps on OOM appear in DUMPS_DIR
-    JVM_ARGS="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=\${ENV=DUMPS_DIR}"
+    JVM_ARGS="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${DUMPS_DIR}"
 
-# Create basic pathes
+# Create basic paths:
 USER root
-RUN mkdir -p ${HOME_DIR} ${SCRIPT_DIR} ${SECRETS_DIR} && \
-    mkdir -p ${DATA_DIR} ${METADATA_DIR} ${DOCROOT_DIR} ${DUMPS_DIR} && \
+
+RUN mkdir -p ${DATA_DIR} ${METADATA_DIR} ${DOCROOT_DIR} ${SECRETS_DIR} ${DUMPS_DIR} && \
     chown -R payara: ${DATA_DIR} ${METADATA_DIR} ${DOCROOT_DIR} ${SECRETS_DIR} ${DUMPS_DIR}
 
-# Install prerequisites
+# Install prerequisites:
 RUN apt-get -qq update && \
-    apt-get -qqy install postgresql-client jq imagemagick curl wget unzip
+    DEBIAN_FRONTEND=noninteractive apt-get -qqy install postgresql-client jq imagemagick curl wget unzip ed bc original-awk
 
-# Install esh template engine from Github
-RUN wget --no-verbose -O esh https://raw.githubusercontent.com/jirutka/esh/v0.3.0/esh && \
-    echo 'fe030e23fc1383780d08128eecf322257cec743b esh' | sha1sum -c - && \
+# Install esh template engine from Github:
+RUN wget --no-verbose -O esh https://raw.githubusercontent.com/jirutka/esh/v0.3.1/esh && \
+    echo 'ad5dfa4a8971d66dd563dff3c63c8241878d5108  esh' | sha1sum -c - && \
     chmod +x esh && mv esh /usr/local/bin
 
-# Install PostgreSQL JDBC driver in AppServer
+# Install PostgreSQL JDBC driver in AppServer:
 # TODO: remove this once upstream includes the Postgres Client lib in the WAR.
 USER payara
 RUN wget --no-verbose -O postgresql.jar ${PGDRIVER_PKG} && \
     mv postgresql.jar ${PAYARA_DIR}/glassfish/lib
 
-# Make docroot of Payara reside in higher level directory for easier targeting
-# Due to IQSS/dataverse-kubernetes#177: create the generated pathes so they are
+# Make docroot of Payara reside in higher level directory for easier targeting.
+# Due to IQSS/dataverse-kubernetes#177: create the generated paths so they are
 # writeable by us. TBR with #178.
 RUN rm -rf ${DOMAIN_DIR}/docroot && \
     ln -s ${DOCROOT_DIR} ${DOMAIN_DIR}/docroot && \
     mkdir -p ${DOMAIN_DIR}/generated/jsp/dataverse
 
 # Retrieve the Dataverse install package, extract and remove ZIP,
-#    symlink WAR file and remove Harvard custom metadatablocks
+# symlink WAR file and remove Harvard custom metadatablocks.
 RUN cd ${HOME_DIR} && \
     wget --no-verbose -O dvinstall.zip ${DATAVERSE_PKG} && \
     unzip -qq dvinstall.zip -d ./ && \
@@ -59,6 +69,10 @@ RUN cd ${HOME_DIR} && \
     ln -s ${HOME_DIR}/dvinstall/dataverse.war ${DEPLOY_DIR}/dataverse.war && \
     find . -iname "custom*.tsv" -delete
 
-# Copy across docker scripts
+## COPY .tsv file(s) to the proper location.
+# ADD https://raw.githubusercontent.com/IQSS/dataverse-docker/master/config/schemas/CESSDA_CMM.tsv /opt/payara/dvinstall/data/metadatablocks/cessda_cmm.tsv
+# COPY --chown=payara:payara docker/dataverse-k8s/payara/cmdb/*.tsv /opt/payara/dvinstall/data/metadatablocks/
+
+# Copy across docker scripts:
 COPY --chown=payara:payara docker/dataverse-k8s/bin/* docker/dataverse-k8s/payara/bin/*.sh ${SCRIPT_DIR}/
 RUN chmod +x ${SCRIPT_DIR}/*
