--- a/docker/dataverse-k8s/bin/default.config
+++ b/docker/dataverse-k8s/bin/default.config
@@ -29,7 +29,7 @@ export dataverse_rserve_port=${dataverse_rserve_port:-6311}
 export dataverse_rserve_user=${dataverse_rserve_user:-rserve}
 export dataverse_rserve_password='${ALIAS=rserve_password_alias}'
 export dataverse_fqdn=${dataverse_fqdn:-"localhost"}
-export dataverse_siteUrl=${dataverse_siteUrl:-"http://\${dataverse.fqdn}:8080"}
+export dataverse_siteUrl=${dataverse_siteUrl:-"http://${dataverse_fqdn}:8080"}
 export dataverse_auth_password__reset__timeout__in__minutes=${dataverse_auth_password__reset__timeout__in__minutes:-60}
 export dataverse_timerServer=${dataverse_timerServer:-true}
 
