--- a/k8s/dataverse/jobs/bootstrap.yaml
+++ b/k8s/dataverse/jobs/bootstrap.yaml
@@ -17,12 +17,22 @@ spec:
     spec:
       containers:
         - name: bootstrap
-          image: iqss/dataverse-k8s
-          command: ["scripts/bootstrap-job.sh"]
+          image: sshoc/dataverse-k8s:5.9
+          command: ["/opt/payara/scripts/bootstrap-job.sh"]
           envFrom:
             - configMapRef:
                 name: dataverse
           env:
+            - name: DATAVERSE_DB_HOST
+              value: postgresql
+            - name: SOLR_SERVICE_HOST
+              value: solr
+            - name: DATAVERSE_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: dataverse-postgresql
+                  key: password
+                  optional: true
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
@@ -50,17 +60,17 @@ spec:
               readOnly: true
       initContainers:
         - name: check-db-ready
-          image: postgres:9.6
+          image: postgres:10.13
           command: ['sh', '-c',
             'until pg_isready -h "${POSTGRESQL_SERVICE_HOST}" -p "${POSTGRESQL_SERVICE_PORT}";
             do echo waiting for database; sleep 3; done;']
         - name: check-solr-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${SOLR_SERVICE_HOST}:${SOLR_SERVICE_PORT}/solr/collection1/admin/ping" 2>&1 | grep "status.:.OK";
             do echo waiting for solr; sleep 3; done;']
         - name: check-dataverse-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/robots.txt" -m 2 2>&1 > /dev/null;
             do echo waiting for dataverse; sleep 15; done;']
