--- a/k8s/dataverse/jobs/configure.yaml
+++ b/k8s/dataverse/jobs/configure.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - name: configure
-          image: iqss/dataverse-k8s
-          command: ["scripts/config-job.sh"]
+          image: sshoc/dataverse-k8s:5.9
+          command: ["/opt/payara/scripts/config-job.sh"]
           envFrom:
             - configMapRef:
                 name: dataverse
@@ -32,7 +32,7 @@ spec:
               readOnly: true
       initContainers:
         - name: check-dataverse-ready
-          image: giantswarm/tiny-tools
+          image: curlimages/curl
           command: ['sh', '-c',
             'until curl -sS -f "http://${DATAVERSE_SERVICE_HOST}:${DATAVERSE_SERVICE_PORT_HTTP}/robots.txt" -m 2 2>&1 > /dev/null;
             do echo waiting for dataverse; sleep 15; done;']
