--- a/personas/demo/patch-memory.yaml
+++ b/personas/demo/patch-memory.yaml
@@ -10,9 +10,9 @@ spec:
         - name: dataverse
           resources:
             requests:
-              memory: "1.5Gi"
+              memory: 2.5Gi
             limits:
-              memory: "1.5Gi"
+              memory: 2.5Gi
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -25,6 +25,6 @@ spec:
         - name: solr
           resources:
             requests:
-              memory: "0.8Gi"
+              memory: 1Gi
             limits:
-              memory: "0.8Gi"
+              memory: 1Gi
